<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    style="@style/FondoAsteroides"
    tools:context="com.example.moises_solis.asteroides.MainActivity">


    <TextView


        android:gravity="center"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="@style/TextoAsteroides"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnjugar"
        style="@style/TextoAsteroides.boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrarpreferencias"

        android:text="@string/Jugar" />

    <Button
        android:id="@+id/btnconfigurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="lanzarpreferencias"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/btnacercade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="clickacercade"
        android:text="@string/Acerca_de" />

    <Button
        android:text="@string/Salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnsalir"
        style="@style/TextoAsteroides.boton"
        />
</LinearLayout>
